--- a/alpha/citi_user/templates/registration/activation_complete.html
+++ b/alpha/citi_user/templates/registration/activation_complete.html
@@ -1,4 +1,5 @@
 {% extends 'home.html' %}
+{% block title %} | activated{% endblock %}
 {% block content %}
 <div id="activation_complete">
   <header>
