--- a/alpha/event/templates/events/creation_complete.html
+++ b/alpha/event/templates/events/creation_complete.html
@@ -1,4 +1,5 @@
 {% extends 'home.html' %}
+{% block title %} | event created{% endblock %}
 {% block content %}
   <section class="body noborder">
     <h1>Event Posted!</h1>
