--- a/alpha/event/templates/events/event_description.html
+++ b/alpha/event/templates/events/event_description.html
@@ -1,5 +1,5 @@
 {% extends 'home.html' %}
-
+{% block title %} | view | {{ event.name }}{% endblock %}
 {% block content %}
 
 {% block breadcrumb %}
