--- a/alpha/home/templates/base.html
+++ b/alpha/home/templates/base.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>{% block title %}{% endblock %}</title>
+  <title>cityfusion.ca{% block title %}{% endblock %}</title>
   <meta name="description" content="{% block description %}{% endblock %}">
   <meta name="author" content="{% block author %}{% endblock %}" >
 
@@ -20,7 +20,7 @@
   </div> 
 	<footer id="footer">
 	  <div class="wrapper">
-	    <p>&copy; Cityfusion {% now "Y" %}.</p>
+	    <p>&copy; cityfusion.ca {% now "Y" %}.</p>
 	    <nav>
 	      <ul>
 					<!--<li><a href="{% url feedback %}">Feedback</a></li>-->
