--- a/alpha/event/templates/events/edit_event.html
+++ b/alpha/event/templates/events/edit_event.html
@@ -1,4 +1,5 @@
 {% extends 'events/create_event.html' %}
+{% block title %} | edit event | {{ event.name }}{% endblock %}
 
 {% block page_title %}
     <h1>Edit Event</h1>
