captialization and arrows

--- a/alpha/citi_user/templates/citi_user/events.html
+++ b/alpha/citi_user/templates/citi_user/events.html
@@ -1,5 +1,5 @@
 {% extends 'home.html' %}
-{% block title %} | your events{% endblock %}
+{% block title %} > Your Events{% endblock %}
 
 {% block content %}
 <section class="body">
