--- a/alpha/citi_user/templates/registration/activate.html
+++ b/alpha/citi_user/templates/registration/activate.html
@@ -1,5 +1,5 @@
 {% extends 'home.html' %}
-{% block title %} | activate{% endblock %}
+{% block title %} > Activate{% endblock %}
 {% block content %}
 <div id="activate">
   {% if account %}
