--- a/alpha/citi_user/templates/registration/login.html
+++ b/alpha/citi_user/templates/registration/login.html
@@ -1,5 +1,5 @@
 {% extends 'home.html' %}
-{% block title %} | sign in{% endblock %}
+{% block title %} > Sign In{% endblock %}
 
 {% block content %}
   <section class="body">
