--- a/alpha/citi_user/templates/registration/logout.html
+++ b/alpha/citi_user/templates/registration/logout.html
@@ -1,5 +1,5 @@
 {% extends 'home.html' %}
-{% block title %} | signed out{% endblock %}
+{% block title %} > Signed Out{% endblock %}
 
 {% block content %}
 <div id="logout">
