--- a/alpha/citi_user/templates/registration/password_reset_done.html
+++ b/alpha/citi_user/templates/registration/password_reset_done.html
@@ -1,5 +1,5 @@
 {% extends 'home.html' %}
-{% block title %} | reset successful{% endblock %}
+{% block title %} > Reset Successful{% endblock %}
 
 {% block content %}
 <section class="body">
