--- a/alpha/citi_user/templates/registration/registration_complete.html
+++ b/alpha/citi_user/templates/registration/registration_complete.html
@@ -1,5 +1,5 @@
 {% extends 'home.html' %}
-{% block title %} | registration complete{% endblock %}
+{% block title %} > Registration Complete{% endblock %}
 
 {% block content %}
 <div id="registration_complete">
