--- a/alpha/citi_user/templates/registration/registration_form.html
+++ b/alpha/citi_user/templates/registration/registration_form.html
@@ -1,5 +1,5 @@
 {% extends 'home.html' %}
-{% block title %} | register{% endblock %}
+{% block title %} > Register{% endblock %}
 
 {% block content %}
   <section class="body">
