--- a/alpha/event/templates/events/browse_events.html
+++ b/alpha/event/templates/events/browse_events.html
@@ -17,7 +17,7 @@ browsing: the boolean stating to the header that we are browsing (the top button
 browse_bar: the boolean stating to the header that we want a nav list of dates in the header
 {% endcomment %}
 {% load date_formatting %}
-{% block title %} | browse | {{ page_date }}{% endblock %}
+{% block title %} > Browse > {{ page_date }}{% endblock %}
 {% block content %}
 <aside id="tags">
   <nav>
