--- a/alpha/event/templates/events/create_event.html
+++ b/alpha/event/templates/events/create_event.html
@@ -1,5 +1,5 @@
 {% extends 'home.html' %}
-{% block title %} | post event{% endblock %}
+{% block title %} > Post Event{% endblock %}
 
 {% block content %}
 
