--- a/alpha/citi_user/templates/registration/password_reset_confirm.html
+++ b/alpha/citi_user/templates/registration/password_reset_confirm.html
@@ -1,6 +1,6 @@
 {% extends 'home.html' %}
 {% load i18n %}
-{% block title %} | confirm reset{% endblock %}
+{% block title %} > Confirm Reset{% endblock %}
 
 {% block content %}
 <section class="body">
