--- a/alpha/citi_user/templates/registration/password_reset_form.html
+++ b/alpha/citi_user/templates/registration/password_reset_form.html
@@ -1,5 +1,5 @@
 {% extends 'home.html' %}
-{% block title %} | reset password{% endblock %}
+{% block title %} > Reset Password{% endblock %}
 
 {% block content %}
   <section class="body">
