--- a/alpha/citi_user/templates/registration/terms.html
+++ b/alpha/citi_user/templates/registration/terms.html
@@ -1,5 +1,5 @@
 {% extends 'home.html' %}
-{% block title %} | terms and conditions{% endblock %}
+{% block title %} > Terms and Conditions{% endblock %}
 
 {% block content %}
 <header>
