--- a/alpha/feedback/templates/feedback/contact_thanks.html
+++ b/alpha/feedback/templates/feedback/contact_thanks.html
@@ -4,6 +4,6 @@
 <section class="body">
 <h2>Thank you.</h2>
 <p>Feedback sent. Thank you for your contribution.</p>
-<p><a href="{% url home %}">Click here</a> to return the home page.</a></p>
+<p><a href="{% url home %}">Return to cityfusion.ca</a>.</p>
 </section>
 {% endblock %}
