fixed pages not showing on 2 page count, and remember me box on login

--- a/alpha/citi_user/templates/registration/login.html
+++ b/alpha/citi_user/templates/registration/login.html
@@ -21,7 +21,7 @@
 	{% endfor %}
       </p>
       <p class="remember">
-	{{ form.remember }} <label for="{{ form.remember.label }}">Remember me</label><br>
+	{{ form.remember }} <label for="id_remember">Remember me</label><br>
       </p>
 	
       <input type="submit" class="submit button close" value="Sign In">
