--- a/alpha/citi_user/templates/registration/login.html
+++ b/alpha/citi_user/templates/registration/login.html
@@ -24,7 +24,7 @@
 	{{ form.remember }} <label for="id_remember">Remember me</label><br>
       </p>
 	
-      <input type="submit" class="submit button close" value="Sign In">
+      <input type="submit" class="submit button close" value="Sign In" tabindex="10">
     </form>
   </section><!-- .body -->
 {% endblock%}
