--- a/alpha/citi_user/templates/registration/registration_form.html
+++ b/alpha/citi_user/templates/registration/registration_form.html
@@ -35,7 +35,7 @@
 	{% endfor %}
       </p>
      
-      <input type="submit" class="submit button close" value="Register">      
+      <input type="submit" class="submit button close" value="Register" tabindex="10">      
     </form>
   </section>
 {% endblock %}
