tag color change

--- a/alpha/home/templates/base.html
+++ b/alpha/home/templates/base.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
 
   <title>cityfusion.ca{% block title %}{% endblock %}</title>
-  <meta name="description" content="{% block description %}{% endblock %}">
-  <meta name="author" content="{% block author %}{% endblock %}" >
+  <meta name="description" content="Online events listings. Find and post local events.">
+  <meta name="author" content="Peak Experience, peakxp.com">
 
   <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css?v=2">
   {% block css %}{% endblock %}
