--- a/alpha/feedback/templates/feedback/contact.html
+++ b/alpha/feedback/templates/feedback/contact.html
@@ -4,7 +4,7 @@
 {% block content %}
 <section class="body">
 <h2>Feedback</h2>
-<p>We'd love to hear your comments, ideas, praise, complaints.</p>
+<p>We'd love to hear your comments on how Cityfusion can be improved for you.</p>
 
 <form id="contact" method="post">
   {% csrf_token %}
