--- a/alpha/home/templates/base.html
+++ b/alpha/home/templates/base.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Online events listings. Find and post local events.">
   <meta name="author" content="Peak Experience, peakxp.com">
 
-  <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css?v=2">
+  <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css">
   {% block css %}{% endblock %}
   {% block redirect %}{% endblock %}
   <script src="{{ STATIC_URL }}js/libs/modernizr-1.7.min.js"></script>
