--- a/alpha/home/static/css/style.css
+++ b/alpha/home/static/css/style.css
@@ -143,7 +143,7 @@ a:hover { text-decoration: underline; }
 .events a.text , .events a.edit { position: absolute; top: 0; left: 45px; padding: 5px; color: #2D51D8; font-size: 14px; font-weight: normal; }
 .events a.edit { top: 39px; font-size: 11px; }
 .events li ul { position: absolute; left: 50px; top: 19px; }
-.events li li { float: left; margin: 6px 13px 0 0; padding: 0; height: 15px; font-size: 12px; }
+.events li li { float: left; margin: 6px 13px 0 0; padding: 0; height: 10px; font-size: 12px; }
 
 .detail { padding-left: 23px; }
 .detail ul { margin: 15px 0; overflow: hidden; }
@@ -195,7 +195,7 @@ form span.error { display:block; padding: 0 0 12px 10px; color: red; }
 
 #ads { width: 125px; padding: 20px 0 0 11px; overflow: hidden; }
 #ads p { margin-bottom: 10px; color: #999; font-size: 11px; }
-#ads li { height: 125px; width: 125px; margin: 0 0 10px; float: left; background: #d9d9d9; }
+#ads li { height: 125px; width: 125px; margin: 0 0 10px; float: left; }
 
 #footer { height: 56px; width: 100%; margin: 0 auto; background: #eee; line-height: 57px; font-size: 12px; font-weight: bold; }
 #footer p { float: left; padding-left: 9px; color: #797979; }
