--- a/alpha/home/static/css/style.css
+++ b/alpha/home/static/css/style.css
@@ -111,9 +111,10 @@ a:hover { text-decoration: underline; }
 #tags { width: 140px; margin: 20px 10px 0 0; float: left; font-size: 12px; }
 #tags li { height: 26px; margin-bottom: 1px; }
 #tags a { display: block; height: 26px; padding-left: 9px; border-radius: 3px; font-weight: bold; line-height: 26px; overflow: hidden; }
+#tags a:hover { background-color: #5c74cd; }
 #tags a.active, #tags a:hover { background: #2D51D8 url('../img/icons.png') no-repeat 119px -265px; color: #fff; text-decoration: none; }
 #tags a:active { background-position: 119px -291px; }
-#tags a.active { background: #5c74cd; background-position: 119px -317px; }
+#tags a.active { background-position: 119px -317px; }
 #tags a.active:hover { background-position: 119px -343px; }
 #tags li:first-child { margin-bottom: 2px; padding-bottom: 2px; border-bottom: 1px solid #ccc; }
 #tags li:first-child a.active { background: #2D51D8; }
