--- a/alpha/event/templates/events/create_event.html
+++ b/alpha/event/templates/events/create_event.html
@@ -10,18 +10,16 @@
       <ul>
 	{% if form.non_field_errors %}<li class="label"></li>
 	<li>{{ form.non_field_errors }}</li>{% endif %}
-	{% if form.email %}<li class="label">{{ form.email.label_tag }}</li>
-	<li>{{ form.email }}</li>
-	<li id="email-info">{% for error in form.email.errors %}<span class="error">{{ error }}</span> {% endfor %}</li>{% endif %}
 	
 	<li class="label">{{ form.name.label_tag }}</li><li>{{ form.name }}</li>
 	<li id="name-info">{% for error in form.name.errors %}<span class="error">{{ error }}</span> {% endfor %}</li>
 
-
+  <!-- Location -->
 	<li class="label">{{ form.location.label_tag }}</li>
 	<li>{{ form.location }}</li>
 	<li id="location-info">{% for error in form.location.errors %}<span class="error">{{ error }}</span> {% endfor %}</li>
 	
+	<!-- Times -->
 	<li class="label">{{ form.start_time.label_tag }}</li>
 	<li>{{ form.start_time }}
 	  <a href="" class="addevent" id="addevent">+ Add end time</a></li>
@@ -65,6 +63,11 @@
 	</li>
 	<li>{{ form.picture }}</li>
 	<li id="image-info">{% for error in form.username.errors %}<span class="error">{{ error }}</span> {% endfor %}</li>
+
+  <!-- Email -->
+	{% if form.email %}<li class="label">{{ form.email.label_tag }}</li>
+	<li>{{ form.email }}</li>
+	<li id="email-info">{% for error in form.email.errors %}<span class="error">{{ error }}</span> {% endfor %}</li>{% endif %}
 
 	<!-- Submit -->
 	<li class="label"></li>
