--- a/alpha/home/static/css/style.css
+++ b/alpha/home/static/css/style.css
@@ -138,16 +138,16 @@ a:hover { text-decoration: underline; }
 #photo { float: left; width: 200px; padding-top: 20px; }
 #photo img { display: block; }
 
-.events li { position: relative; display: block; margin: 20px 0; color: #666; height: 40px; padding: 5px; }
+.events li { position: relative; display: block; margin: 10px 0; color: #666; padding: 5px; overflow: hidden; }
 .events li:hover { background: #f0f1f4; }
 .events li:hover a.text { text-decoration: underline; }
-.events img { position: absolute; height: 40px; width: 40px; top: 5px; left: 5px; background: #f0f1f4; }
+.events img { float: left; height: 40px; width: 40px; margin-right: 5px; background: #f0f1f4;  }
 .events a { cursor: pointer; }
-.events a.text , .events a.edit { position: absolute; top: 4px; left: 50px; padding: 5px; color: #2D51D8; font-size: 14px; font-weight: normal; }
+.events a.text, .events a.edit { display: block; padding: 5px; color: #2D51D8; font-size: 14px; line-height: 14px; font-weight: normal; }
 .events a.row { position: absolute; top: 0; left: 0; bottom: 0; right: 0; }
 .events a.edit { top: 39px; font-size: 11px; }
-.events li ul { position: absolute; left: 55px; top: 24px; }
-.events li li { float: left; margin: 6px 13px 0 0; padding: 0; height: 10px; font-size: 12px; }
+.events li ul { overflow: hidden; margin-top: -2px; }
+.events li li { float: left; margin: 6px 13px 0 0; padding: 0; height: 13px; font-size: 12px; }
 
 .detail { padding-left: 23px; }
 .detail ul { margin: 15px 0; overflow: hidden; }
