--- a/alpha/event/templates/events/create_event.html
+++ b/alpha/event/templates/events/create_event.html
@@ -27,6 +27,8 @@
 	<li class="label end_time">{{ form.end_time.label_tag }}</li>
 	<li class="end_time">{{ form.end_time }}
 	  <a href="" id="remove_time" class="addevent">- Remove end time</a></li>
+	<li class="label">Create Recurrence</li>
+	<li>{{ form.recur }}</li>
 	<li class="label">{{ form.price.label_tag }}<span class="description">Optional</span></li>
 	<li>{{ form.price }}</li>
 	<li id="price-info">{% for error in form.price.errors %}<span class="error">{{ error }}</span> {% endfor %}</li>	
