--- a/alpha/home/static/css/style.css
+++ b/alpha/home/static/css/style.css
@@ -183,6 +183,7 @@ textarea { height: 75px; }
 
 form .addevent { display: inline-block; margin-left: 5px; vertical-align: top; line-height: 32px; font-size: 11px; font-weight: bold; }
 form .end_time { display: none; }
+form .end_time #recur { padding-left: 130px; padding-bottom: 15px; }
 form .forgot { padding-left: 3px; margin: 4px; font-size: 11px; }
 form .password { font-size: 16px; }
 form .remember { margin: 0 0 10px; }
