--- a/alpha/event/templates/events/create_event.html
+++ b/alpha/event/templates/events/create_event.html
@@ -27,8 +27,8 @@
 	<li class="label end_time">{{ form.end_time.label_tag }}</li>
 	<li class="end_time">{{ form.end_time }}
 	  <a href="" id="remove_time" class="addevent">- Remove end time</a>
-	  {% comment %}<br>
-	  <div id="recur">{{ form.recur }} {{ form.recur.label_tag }}</div> {% endcomment %}
+	  <br>
+	  <div id="recur">{{ form.recur }} {{ form.recur.label_tag }}</div>
 	</li>
 
 	<!-- Price -->
